export type ReadStore = (key: string) => any;
