export type WriteStore = (key: string, value: any) => void;
